--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+h3 {
+  padding: 5px;
+  text-transform: uppercase;
+}
+
 *,
 *::before,
 *::after {
@@ -15,17 +20,81 @@
   height: 40px;
   border-radius: 100%;
   object-fit: cover;
-}
-
-.grid-container {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-areas: "header" "nav" "main-content";
+  margin: 0 auto;
 }
 
 .main-content {
   grid-area: main-content;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "dash-board-section" "traffic-board" "bar-widget" "doughnut-widget" "social-container" "new-members" "recent-activity" "message-user" "settings";
+}
+
+.dash-board-section {
+  grid-area: dash-board-section;
+}
+.dash-board-section .dash-board {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dash-board-section .dash-board-heading {
+  width: max-content;
+  text-align: center;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 18px;
+}
+.dash-board-section .dash-board-tab {
+  width: 195px;
+  height: 50px;
+  margin-bottom: 10px;
+  background-color: rgba(157, 180, 216, 0.1960784314);
+  border-left: 1px solid rgba(122, 128, 136, 0.3764705882);
+  border-bottom: 1px solid rgba(122, 128, 136, 0.3764705882);
+  border-radius: 2px;
+  padding: 10px;
+}
+.dash-board-section .alert {
+  width: 280px;
+  height: 30px;
+  border-radius: 5px;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: #506BC4;
+  text-align: center;
+  color: white;
+}
+
+.traffic-board {
+  grid-area: traffic-board;
+  width: max-content;
+}
+
+.traffic-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  gap: 20px;
+}
+
+.full-widget-container {
+  width: 350px;
+  height: 350px;
+  margin: 0 auto;
+}
+
+#line-chart {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.grid-container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "header" "nav" "main-content";
 }
 
 .header {
@@ -79,6 +148,7 @@
 
 .profile-name {
   padding: 10px;
+  margin-right: 20px;
 }
 
 .nav {
