--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -2,19 +2,18 @@
 @use "../utilities/variables" as *;
 
 .grid-container{
+    width: 100%;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas: 
     "header"
     "nav"
-    "main-content"
+    "main-content";
 }
 
 
-.main-content{
-    grid-area:main-content;
-}
+
 
 
 
