--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -2,7 +2,10 @@
 @use "../utilities/variables" as *;
 
 h3{
-padding: 5px;
+margin-bottom: 10px;
 text-transform:uppercase;
+width: max-content;
+text-align: center;
+font-weight: 600;
 }
 
