--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -2,10 +2,11 @@
 @use "../utilities/variables" as *;
 
 .grid-container{
-    width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
-    grid-template-columns: 1fr;
+    // background-color: rgba(0, 128, 0, 0.334);
+    // grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-areas: 
     "header"
     "nav"
