--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,11 +5,18 @@
 .header{
     grid-area: header;
     display: flex;
-    background-color:#506BC4;
+    justify-content: center;
     align-items: center;
-    padding: 10px;
+    background-color:#506BC4;
     color: white;
     position: relative;
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    gap: 15px;
+    padding: 2px 10px;
+    margin: 0 auto;
+    // border: 1px solid black;
    
 }
 
@@ -19,6 +26,7 @@
 
 .title{
     font-size: 20px;
+    // padding: 5px;
 }
 
 .svg-bell{
@@ -41,7 +49,7 @@
     height: 5px;
     position: absolute;
     top: 30%;
-    left: 40%;
+    left: 43%;
     border-radius: 100%;
 }
 
@@ -53,7 +61,6 @@
             left: 47%;
 }
 .profile-name{
-    padding: 10px;
-   margin-right: 20px;
+    // padding: 5px;
 }
 
