--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,62 @@ h3 {
   max-height: 100%;
 }
 
+.bar-graph {
+  padding: 20px;
+}
+.bar-graph .bar-widget {
+  width: 100%;
+  height: 100%;
+}
+.bar-graph .bar-widget #daily-chart {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.doughnut-graph {
+  margin: 0 auto;
+  padding-top: 10px;
+}
+.doughnut-graph .mobile-widget {
+  position: relative;
+  width: 250px;
+}
+
+.social-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 15px;
+}
+.social-container .social-divs {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid rgba(106, 105, 105, 0.5843137255);
+  width: 250px;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(173, 189, 240, 0.3411764706);
+}
+.social-container .social-divs .social-svg {
+  width: 50px;
+  height: 50px;
+  background-color: #506BC4;
+  border-radius: 100%;
+  padding: 12px;
+}
+.social-container .social-name {
+  color: #1341d6;
+  font-weight: 500;
+  font-size: 18px;
+  text-transform: capitalize;
+}
+.social-container .social-data {
+  font-weight: 500;
+  font-size: 40px;
+}
+
 .grid-container {
   min-height: 100vh;
   display: grid;
