--- a/sass/layouts/_content.scss
+++ b/sass/layouts/_content.scss
@@ -95,8 +95,74 @@
 }
 
 
+.bar-graph{
+ padding: 20px;
 
 
+ .bar-widget{
+    width: 100%;
+    height: 100%;
+    
+    #daily-chart{
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+}
+
+
+.doughnut-graph{
+    margin: 0 auto;
+    padding-top: 10px;
+
+    .mobile-widget{
+        position: relative;
+        width: 250px;
+    }
+}
+
+.social-container{
+   display: flex;
+   flex-direction: column;
+   gap: 15px;
+   padding: 15px;
+
+    .social-divs{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        border: 1px solid #6a696995;
+        width: 250px;
+        margin: 0 auto;
+        padding: 10px;
+        border-radius:5px;
+        background-color: #adbdf057;
+
+        .social-svg{
+            width: 50px;
+            height: 50px;
+        background-color: #506BC4;
+           border-radius:100% ;
+           padding: 12px;
+
+            }
+
+
+
+    }
+
+    .social-name{
+        color: #1341d6;
+        font-weight: 500;
+        font-size: 18px;
+        text-transform: capitalize;
+    }
+
+    .social-data{
+        font-weight: 500;
+        font-size: 40px;
+    }
+}
 
 
 
