--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ h3 {
   font-weight: 600;
 }
 
+a {
+  text-decoration: none;
+}
+
 *,
 *::before,
 *::after {
@@ -21,6 +25,13 @@ h3 {
 .profile-img {
   width: 40px;
   height: 40px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+.member-img {
+  width: 80px;
+  height: 80px;
   border-radius: 100%;
   object-fit: cover;
 }
@@ -147,6 +158,126 @@ h3 {
 .social-container .social-data {
   font-weight: 500;
   font-size: 40px;
+}
+
+.new-members {
+  margin: 1em auto;
+  text-align: center;
+  line-height: 1.2;
+}
+.new-members .members-profile {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.recent-activity {
+  margin: 1em auto;
+  text-align: center;
+  line-height: 1.2;
+  padding: 15px;
+}
+.recent-activity .members-profile {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.message-user {
+  padding: 15px;
+}
+.message-user form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+.message-user form input {
+  width: 280px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+.message-user form textarea {
+  width: 280px;
+  height: 150px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+.message-user form .button {
+  width: 280px;
+  height: 40px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  background-color: #506BC4;
+  color: white;
+}
+
+.settings {
+  padding: 15px;
+  width: 100%;
+}
+.settings .notifications {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+.settings .settings-notifications {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  padding: 5px;
+}
+.settings .setting-btns {
+  width: 100px;
+  height: 30px;
+  border-radius: 50px;
+  border: 1px solid gray;
+  background-color: #506BC4;
+  text-align: start;
+  padding: 5px 10px;
+  color: #FFF;
+  position: relative;
+  align-self: center;
+}
+.settings .public-btn {
+  margin-left: 25px;
+}
+.settings .white-circle {
+  background-color: white;
+  border: 1px solid gray;
+  width: 15px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  padding: 10px;
+}
+.settings .form-field {
+  width: 280px;
+  height: 40px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid rgba(128, 128, 128, 0.375);
+  background-color: rgba(185, 189, 203, 0.4588235294);
+  margin-top: 20px;
+}
+.settings .control-button {
+  width: 130px;
+  height: 40px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  background-color: #506BC4;
+  color: white;
+  margin: 1em auto;
+}
+.settings .cancel-button {
+  margin-left: 10px;
+  background-color: gray;
 }
 
 .grid-container {
