--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -1,10 +1,16 @@
 @use "../utilities/mixins"as *;
 @use "../utilities/variables"as *;
 
+
 h3 {
     margin-bottom: 10px;
     text-transform: uppercase;
     width: max-content;
     text-align: center;
     font-weight: 600;
+}
+
+
+a{
+    text-decoration: none;
 }
