--- a/sass/layouts/_content.scss
+++ b/sass/layouts/_content.scss
@@ -52,14 +52,26 @@
     }
 
     .alert{
-        width: 260px;
-        height: 30px;
+        width: 280px;
+        height: 35px;
         border-radius: 5px;
         margin: 0 auto;
-        padding: 5px;
+        padding: 10px;
         background-color:#506BC4;
-        text-align: center;
         color: white;
+        position: relative;
+
+        .x-icon{
+           font-size: 12px;
+            position: absolute;
+            top: 30%;
+            right: 5%;
+            
+        }
+
+        #message2{
+            display: none;
+        }
     }
 }
 
@@ -315,10 +327,106 @@ form{
 
 
 
+.modal{
+    display: none;
+    text-align: center;
+    z-index: 10;
+padding: 10px;
+position: fixed;
+background-color:#D7D8D0;
+}
+
+
+.first-notification{
+  width: 250px;
+top: 112px;
+right: 50px;
 
 
 
 
+.green-dot{
+    background-color:#50C4B0;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 40%;
+    left: 5%;
+    border-radius: 100%;
+}
+
+.close-tab{
+    font-size: 12px;
+    position: absolute;
+    top: 30%;
+    right: 5%;
+}
+
+
+}
+
+
+.second-notification{
+  width: 250px;
+top: 153px;
+right: 50px;
+
+
+
+
+.green-dot{
+    background-color:#50C4B0;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 40%;
+    left: 5%;
+    border-radius: 100%;
+}
+
+.close-tab{
+    font-size: 12px;
+    position: absolute;
+    top: 30%;
+    right: 5%;
+}
+}
+
+
+.third-notification{
+  width: 280px;
+top: 195px;
+right: 40px;
+
+
+
+
+.green-dot{
+    background-color:#50C4B0;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 40%;
+    left: 5%;
+    border-radius: 100%;
+}
+
+.close-tab{
+    font-size: 12px;
+    position: absolute;
+    top: 30%;
+    right: 5%;
+}
+}
+
+
+
+.show{
+    display: block;
+}
+.hide{
+    display: none;
+}
 
 
 
