--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.grid-container {
+  font-family: "Open Sans", sans-serif;
+}
+
 h3 {
   margin-bottom: 10px;
   text-transform: uppercase;
@@ -20,6 +24,100 @@ a {
   margin: 0;
   padding: 0;
   font: inherit;
+}
+
+.list-btn {
+  text-decoration: none;
+  padding: 5px 10px;
+  margin-right: 5px;
+  color: black;
+}
+
+.list-btn:hover {
+  border-radius: 20px;
+  background-color: #50C4B0;
+  color: white;
+}
+
+.toggle-btn {
+  width: 80px;
+  height: 30px;
+  border-radius: 50px;
+  border: 1px solid gray;
+  background-color: #506BC4;
+  text-align: start;
+  padding: 5px 10px;
+  color: white;
+  position: relative;
+  align-self: center;
+}
+
+.public-btn {
+  margin-left: 25px;
+}
+
+.form-button {
+  width: 280px;
+  height: 40px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  background-color: #506BC4;
+  color: white;
+}
+
+.form-button:hover {
+  border: 1px solid hsla(0, 0%, 50%, 0.2);
+  box-shadow: 0 5px 5px -4px;
+  transition: all 200ms;
+  background-color: #50C4B0;
+}
+
+.setting-button {
+  width: 130px;
+  height: 40px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  background-color: #506BC4;
+  color: white;
+  margin: 1em auto;
+}
+
+.setting-button:hover {
+  border: 1px solid hsla(0, 0%, 50%, 0.2);
+  box-shadow: 0 5px 5px -4px;
+  transition: all 200ms;
+  background-color: #50C4B0;
+}
+
+.cancel-button {
+  margin-left: 10px;
+  background-color: gray;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+}
+form input {
+  width: 280px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid hsla(0, 0%, 50%, 0.2);
+  box-shadow: 0 5px 5px -4px;
+  transition: all 200ms;
+}
+form textarea {
+  width: 280px;
+  height: 150px;
+  padding: 5px;
+  border-radius: 2px;
+  border: 1px solid hsla(0, 0%, 50%, 0.2);
+  box-shadow: 0 5px 5px -4px;
+  transition: all 200ms;
 }
 
 .profile-img {
@@ -49,8 +147,8 @@ a {
 }
 .dash-board-section .dash-board {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 100%;
 }
 .dash-board-section .dash-board-heading {
@@ -71,29 +169,40 @@ a {
   padding: 10px;
 }
 .dash-board-section .alert {
-  width: 280px;
+  width: 300px;
   height: 35px;
-  border-radius: 5px;
+  border-radius: 1px;
   margin: 0 auto;
-  padding: 10px;
+  margin-left: 10px;
+  padding: 5px;
   background-color: #506BC4;
   color: white;
   position: relative;
+  border: 1px solid hsla(0, 0%, 50%, 0.2);
+  box-shadow: 0 5px 5px -4px;
+  transition: all 200ms;
+}
+.dash-board-section .alert #message2 {
+  display: none;
 }
 .dash-board-section .alert .x-icon {
   font-size: 12px;
   position: absolute;
-  top: 30%;
-  right: 5%;
+  top: 10%;
+  right: 3%;
 }
-.dash-board-section .alert #message2 {
-  display: none;
+.dash-board-section .alert .x-icon:hover {
+  color: white;
+  background-color: red;
+  padding: 3px;
+  border-radius: 3px;
+  transition: all 200ms;
 }
 
 .traffic-board {
   grid-area: traffic-board;
   width: max-content;
-  padding: 20px;
+  margin: 0 auto;
 }
 .traffic-board .traffic-heading {
   width: max-content;
@@ -107,13 +216,6 @@ a {
 }
 .traffic-board .traffic-heading .traffic-list ul li {
   list-style: none;
-}
-.traffic-board .traffic-heading .list-btn {
-  border-radius: 20px;
-  text-decoration: none;
-  padding: 5px 10px;
-  margin-right: 5px;
-  background-color: #50C4B0;
 }
 .traffic-board .full-widget-container {
   width: 100%;
@@ -153,14 +255,15 @@ a {
 }
 .social-container .social-divs {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  border: 1px solid rgba(106, 105, 105, 0.5843137255);
+  justify-content: space-evenly;
+  border: none;
   width: 250px;
   margin: 0 auto;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 1px;
   background-color: rgba(173, 189, 240, 0.3411764706);
+  box-shadow: 5px 5px 10px;
 }
 .social-container .social-divs .social-svg {
   width: 50px;
@@ -204,34 +307,6 @@ a {
 .message-user {
   padding: 15px;
 }
-.message-user form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-}
-.message-user form input {
-  width: 280px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid gray;
-}
-.message-user form textarea {
-  width: 280px;
-  height: 150px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid gray;
-}
-.message-user form .button {
-  width: 280px;
-  height: 40px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid gray;
-  background-color: #506BC4;
-  color: white;
-}
 
 .settings {
   padding: 15px;
@@ -239,31 +314,16 @@ a {
 }
 .settings .notifications {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 10px;
-  width: 100%;
+  flex-direction: column;
+  gap: 5px;
+  width: max-content;
 }
 .settings .settings-notifications {
   display: flex;
-  gap: 15px;
   align-items: center;
+  gap: 15px;
   padding: 5px;
-}
-.settings .setting-btns {
-  width: 100px;
-  height: 30px;
-  border-radius: 50px;
-  border: 1px solid gray;
-  background-color: #506BC4;
-  text-align: start;
-  padding: 5px 10px;
-  color: #FFF;
-  position: relative;
-  align-self: center;
-}
-.settings .public-btn {
-  margin-left: 25px;
 }
 .settings .white-circle {
   background-color: white;
@@ -276,7 +336,14 @@ a {
   right: 10%;
   padding: 10px;
 }
-.settings .form-field {
+.settings .white-circle:hover {
+  cursor: pointer;
+  border: 1px solid hsla(0, 0%, 50%, 0.2);
+  box-shadow: 0 5px 5px -4px;
+  transition: all 200ms;
+  background-color: #50C4B0;
+}
+.settings .time-select {
   width: 280px;
   height: 40px;
   padding: 5px;
@@ -284,20 +351,6 @@ a {
   border: 1px solid rgba(128, 128, 128, 0.375);
   background-color: rgba(185, 189, 203, 0.4588235294);
   margin-top: 20px;
-}
-.settings .control-button {
-  width: 130px;
-  height: 40px;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid gray;
-  background-color: #506BC4;
-  color: white;
-  margin: 1em auto;
-}
-.settings .cancel-button {
-  margin-left: 10px;
-  background-color: gray;
 }
 
 .modal {
@@ -309,12 +362,22 @@ a {
   background-color: #D7D8D0;
 }
 
-.first-notification {
-  width: 250px;
-  top: 112px;
-  right: 50px;
+.close-tab {
+  font-size: 12px;
+  position: absolute;
+  top: 30%;
+  right: 5%;
 }
-.first-notification .green-dot {
+
+.close-tab:hover {
+  color: white;
+  background-color: red;
+  padding: 3px;
+  border-radius: 3px;
+  transition: all 200ms;
+}
+
+.green-dot {
   background-color: #50C4B0;
   width: 10px;
   height: 10px;
@@ -323,11 +386,11 @@ a {
   left: 5%;
   border-radius: 100%;
 }
-.first-notification .close-tab {
-  font-size: 12px;
-  position: absolute;
-  top: 30%;
-  right: 5%;
+
+.first-notification {
+  width: 250px;
+  top: 112px;
+  right: 50px;
 }
 
 .second-notification {
@@ -354,22 +417,7 @@ a {
 .third-notification {
   width: 280px;
   top: 195px;
-  right: 40px;
-}
-.third-notification .green-dot {
-  background-color: #50C4B0;
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  top: 40%;
-  left: 5%;
-  border-radius: 100%;
-}
-.third-notification .close-tab {
-  font-size: 12px;
-  position: absolute;
-  top: 30%;
-  right: 5%;
+  right: 30px;
 }
 
 .show {
@@ -396,8 +444,8 @@ a {
   color: white;
   position: relative;
   max-width: 100%;
-  width: 100%;
   max-height: 100%;
+  width: 100%;
   gap: 15px;
   padding: 2px 10px;
   margin: 0 auto;
@@ -420,7 +468,7 @@ a {
 .tm {
   position: absolute;
   top: 35%;
-  left: 26%;
+  left: 28%;
   font-size: 10px;
 }
 
@@ -430,7 +478,7 @@ a {
   height: 5px;
   position: absolute;
   top: 30%;
-  left: 43%;
+  left: 40%;
   border-radius: 100%;
 }
 
@@ -439,14 +487,14 @@ a {
   height: 40px;
   position: absolute;
   top: 20%;
-  left: 47%;
+  left: 45%;
 }
 
 .nav {
   grid-area: nav;
   max-width: 100%;
-  width: 100%;
   max-height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
