--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,2 +1,6 @@
 @use "../utilities/mixins" as *;
 @use "../utilities/variables" as *;
+
+.grid-container{
+    font-family: 'Open Sans', sans-serif;
+}
